--- a/public/sass/components/_card.scss
+++ b/public/sass/components/_card.scss
@@ -5,6 +5,12 @@
 	overflow: hidden;
 	border-radius: .4rem;
 	color: $color-white;
+
+	@include respond(phone) {
+		display: flex;
+		flex-direction: column;
+		height: 76rem;
+	}
 	
 	&__text {
 		position: absolute;
@@ -15,14 +21,30 @@
 		width: 30%;
 		height: 100%;
 
+		@include respond(phone) {
+			width: 100%;
+			position: relative;
+			flex-basis: 33%;
+		}
+
 		&--left {
 			left: 3rem;
 			text-align: left;
+
+			@include respond(phone) {
+				left: 0;
+				text-align: center;
+			}
 		}
 
 		&--right {
 			right: 3rem;
 			text-align: right;
+
+			@include respond(phone) {
+				right: 0;
+				text-align: center;
+			}
 		}
 	}
 	
@@ -34,11 +56,23 @@
 
 		&--left {
 			background-color: $color-card-1;
+			-webkit-clip-path: polygon(0 0, 48% 0, 32% 100%, 0 100%);
 			clip-path: polygon(0 0, 48% 0, 32% 100%, 0 100%);
+
+			@include respond(phone) {
+				-webkit-clip-path: polygon(0 50%, 100% 67%, 100% 100%, 0 100%);
+				clip-path: polygon(0 50%, 100% 67%, 100% 100%, 0 100%);						
+			}
 		}
 		&--right {
 			background-color: $color-card-2;
+			-webkit-clip-path: polygon(52% 0, 100% 0, 100% 100%, 68% 100%);
 			clip-path: polygon(52% 0, 100% 0, 100% 100%, 68% 100%);
+
+			@include respond(phone) {
+				-webkit-clip-path: polygon(0 67%, 100% 50%, 100% 100%, 0 100%);
+				clip-path: polygon(0 67%, 100% 50%, 100% 100%, 0 100%);						
+			}
 		}
 	  
 	  &-drop-shadow {
@@ -50,12 +84,26 @@
 		&--left {
 			left: .8rem;
 			background-color: rgba($color-card-1, 0.5);
+			-webkit-clip-path: polygon(0 0, 48% 0, 32% 100%, 0 100%);
 			clip-path: polygon(0 0, 48% 0, 32% 100%, 0 100%);
+
+			@include respond(phone) {
+				left: 0;
+				-webkit-clip-path: polygon(0 45%, 100% 66%, 100% 100%, 0 100%);
+				clip-path: polygon(0 45%, 100% 66%, 100% 100%, 0 100%);						
+			}
 		}
 		&--right {
 			right: .8rem;
 			background-color: rgba($color-card-2, 0.5);
+			-webkit-clip-path: polygon(52% 0, 100% 0, 100% 100%, 68% 100%);
 			clip-path: polygon(52% 0, 100% 0, 100% 100%, 68% 100%);
+
+			@include respond(phone) {
+				right: 0;
+				-webkit-clip-path: polygon(0 66%, 100% 45%, 100% 100%, 0 100%);
+				clip-path: polygon(0 66%, 100% 45%, 100% 100%, 0 100%);						
+			}
 		}
 	  }
 	}
@@ -67,11 +115,23 @@
 		width: 100%;
 		background-color: transparent;
 		&--left {
+			-webkit-clip-path: polygon(0 0, 50% 0, 40% 100%, 0 100%);
 			clip-path: polygon(0 0, 50% 0, 40% 100%, 0 100%);
+
+			@include respond(phone) {
+				-webkit-clip-path: polygon(0 69%, 100% 42%, 100% 100%, 0 100%);
+				clip-path: polygon(0 67%, 100% 50%, 100% 100%, 0 100%);						
+			}
 		}
 
 		&--right {
+			-webkit-clip-path: polygon(50% 0, 100% 0, 100% 100%, 60% 100%);
 			clip-path: polygon(50% 0, 100% 0, 100% 100%, 60% 100%);
+
+			@include respond(phone) {
+				-webkit-clip-path: polygon(0 69%, 100% 42%, 100% 100%, 0 100%);
+				clip-path: polygon(0 67%, 100% 50%, 100% 100%, 0 100%);						
+			}
 		}
 	}
 	
@@ -80,9 +140,14 @@
 		height: 100%;
 		width: 100%;
 		background-size: cover;
+
+		@include respond(phone) {
+			position: relative;
+			flex-basis: 67%;
+		}
+
 		&--1 {
 			background-image: linear-gradient(to right bottom, rgba($color-card-1--light, .8), rgba($color-card-1, .5)), url(../img/corehacks.jpg);
-			background-position: translateY();
 		}
 		&--2 {
 			background-image: linear-gradient(to left bottom, rgba($color-card-2--light, .8), rgba($color-card-2, .5)), url(../img/corelore.jpg);
