--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -151,36 +151,36 @@
 <section class="section-traditions">
 	<h2 class="heading2">our events & traditions</h2>
 	<div class="card">
+		<div class="card__background card__background--2">&nbsp;</div>
 		<div class="card__text card__text--right">
 			<h3 class="heading3">CoRE Lore</h2>
 			<h4 class="heading4 u-color-gray">November 21st</h4>
 			<p class="paragraph">CoRE invites all of its alumni back to campus to eat and tell stories. Students and alumni network over dinner cooked by current CoRE members, and dessert brought by alumni. Current and past members speak about their experiences on CoRE and in industry. </p>
 		</div>
-		<div class="card__background card__background--2"></div>
 		<div class="card__layer1 card__layer1--right"></div>
 		<div class="card__layer1-drop-shadow card__layer1-drop-shadow--right"></div>
 		<div class="card__layer2 card__layer2--right"></div>	
 	</div>
 	<h3 class="heading4">CoRE was founded in 1991, making us the oldest living-learning community in BU!</h3>
 	<div class="card">
+		<div class="card__background card__background--1"></div>
 		<div class="card__text card__text--left">
 			<h3 class="heading3">CoRE Hacks</h2>
 			<h4 class="heading4 u-color-gray">March 18th - 19th</h4>
 			<p class="paragraph">Every year, students in CoRE come up with and create their own technically inspired projects. From reimplementing the original DOOM's&reg; graphics engine, to uploading our own Snapchat&reg; filter, CoRE Hacks is an in-house event that brings our ideas to life!</p>
 		</div>
-		<div class="card__background card__background--1"></div>
 		<div class="card__layer1 card__layer1--left"></div>
 		<div class="card__layer1-drop-shadow card__layer1-drop-shadow--left"></div>
 		<div class="card__layer2 card__layer2--left"></div>	
 	</div>
-	<h3 class="heading4">CoRE was responsible for bringing internet to the Dickinson Community!</h3>
+	<h3 class="heading4">CoRE was responsible for bringing internet to the Dickinson Community...</h3>
 	<div class="card">
+		<div class="card__background card__background--3"></div>
 		<div class="card__text card__text--right">
 			<h3 class="heading3">CoreBQ</h2>
 			<h4 class="heading4 u-color-gray">May 5th</h4>
 			<p class="paragraph"> </p>
 		</div>
-		<div class="card__background card__background--3"></div>
 		<div class="card__layer1 card__layer1--right"></div>
 		<div class="card__layer1-drop-shadow card__layer1-drop-shadow--right"></div>
 		<div class="card__layer2 card__layer2--right"></div>	
@@ -190,36 +190,36 @@
 	<h3 class="heading3 u-padding-top-md">...and a few more!</h4>
 	<div class="card-sm-container">
 		<div class="card-sm">
+			<div class="card-sm__background card-sm__background--1"></div>
 			<div class="card-sm__text">
 				<h4 class="heading4">Escape the Room</h4>
-				<h4 class="heading4 u-color-gray-dark">October 28st</h4>
+				<h4 class="heading4 u-color-gray-dark">October 28th</h4>
 				<p class="paragraph">The gang builds an Escape the Room. It goes horribly wrong.</p>
 			</div>
-			<div class="card-sm__background card-sm__background--1"></div>
 		</div>
 		<div class="card-sm">
+			<div class="card-sm__background card-sm__background--2"></div>
 			<div class="card-sm__text">
 				<h4 class="heading4">Secret Snowflake</h4>
 				<h4 class="heading4 u-color-gray-dark">December</h4>
 				<p class="paragraph">Christmas wouldn't be complete without presents!</p>
 			</div>
-			<div class="card-sm__background card-sm__background--2"></div>
 		</div>
 		<div class="card-sm">
+			<div class="card-sm__background card-sm__background--3"></div>
 			<div class="card-sm__text">
 				<h4 class="heading4">Midnight Denny's Runs</h4>
 				<h4 class="heading4 u-color-gray-dark">Whenever we want</h4>
 				<p class="paragraph">Yup.</p>
 			</div>
-			<div class="card-sm__background card-sm__background--3"></div>
 		</div>
 		<div class="card-sm">
+			<div class="card-sm__background card-sm__background--4"></div>
 			<div class="card-sm__text">
 				<h4 class="heading4">Senior Sendoff</h4>
 				<h4 class="heading4 u-color-gray-dark">May</h4>
 				<p class="paragraph">Saying goodbye to our soon-to-be alumni!</p>
 			</div>
-			<div class="card-sm__background card-sm__background--4"></div>
 		</div>
 	</div>
 </section>
