--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -193,7 +193,7 @@
 			<div class="card-sm__background card-sm__background--1"></div>
 			<div class="card-sm__text">
 				<h4 class="heading4">Escape the Room</h4>
-				<h4 class="heading4 u-color-gray-dark">October 28th</h4>
+				<h4 class="heading4 u-color-gray-dark">October</h4>
 				<p class="paragraph">The gang builds an Escape the Room. It goes horribly wrong.</p>
 			</div>
 		</div>
