Cleaned up File Structure and added deploy script

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 
 @import "components/buttons";
 @import "components/card";
+@import "components/mobile-nav";
 @import "components/modals";
 @import "components/embedded-video";
 
