--- a/public/css/main.css
+++ b/public/css/main.css
@@ -334,6 +334,29 @@ body {
           background-position-x: -2rem;
           background-position-y: -3rem; } }
 
+.mobile-nav {
+  display: none; }
+  @media (max-width: 37.5em) {
+    .mobile-nav {
+      display: block; } }
+  .mobile-nav__icon {
+    position: relative;
+    margin-top: 3.5rem; }
+    .mobile-nav__icon, .mobile-nav__icon::before, .mobile-nav__icon::after {
+      width: 4rem;
+      height: 3px;
+      background-color: #29A8E0;
+      display: inline-block;
+      border-radius: 15%; }
+    .mobile-nav__icon::before, .mobile-nav__icon::after {
+      content: "";
+      position: absolute;
+      left: 0; }
+    .mobile-nav__icon::before {
+      top: -1rem; }
+    .mobile-nav__icon::after {
+      top: 1rem; }
+
 .modal {
   font-size: 78%;
   position: fixed;
@@ -535,10 +558,16 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-top: 5.5rem;
   text-transform: uppercase;
   letter-spacing: 1rem;
-  text-align: center; }
+  text-align: center;
+  margin-top: 5.5rem; }
+  @media (max-width: 37.5em) {
+    .nav {
+      justify-content: flex-start;
+      width: auto;
+      margin-top: 2rem;
+      margin-left: 2rem; } }
   .nav__link:link, .nav__link:visited {
     color: white;
     padding: .6rem 0 .6rem 1rem;
@@ -546,15 +575,34 @@ body {
     font-size: 1.4rem;
     text-decoration: none;
     text-align: center; }
+    .nav__link:link:nth-child(1), .nav__link:visited:nth-child(1) {
+      order: 1; }
+    .nav__link:link:nth-child(2), .nav__link:visited:nth-child(2) {
+      order: 2; }
+    .nav__link:link:nth-child(4), .nav__link:visited:nth-child(4) {
+      order: 4; }
+    .nav__link:link:nth-child(5), .nav__link:visited:nth-child(5) {
+      order: 5; }
+    @media (max-width: 37.5em) {
+      .nav__link:link, .nav__link:visited {
+        display: none; } }
   .nav__link--button {
     border: 2px solid #29A8E0;
     border-radius: 2px;
     padding-left: 1rem; }
+  .nav__logo-box {
+    order: 3; }
   .nav__logo {
     width: 30rem; }
-  @media (max-width: 37.5em) {
-    .nav {
-      display: none; } }
+    @media (max-width: 37.5em) {
+      .nav__logo {
+        display: none; } }
+    .nav__logo--mobile {
+      width: 5rem;
+      display: none; }
+      @media (max-width: 37.5em) {
+        .nav__logo--mobile {
+          display: initial; } }
 
 .section-about {
   padding: 15rem 15rem;
