Changed video sizing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -708,3 +708,7 @@ body {
       margin-top: 2rem; }
   .final-cta-text {
     text-align: center; }
+
+#video {
+  width: 56rem;
+  height: 31.5rem; }
