Removed mobile nav

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -603,7 +603,8 @@ body {
       display: none; }
       @media (max-width: 37.5em) {
         .nav__logo--mobile {
-          display: initial; } }
+          display: initial;
+          display: none; } }
 
 .section-about {
   padding: 15rem 15rem;
