Fixed video size and card heights

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -155,7 +155,8 @@ body {
       .card__text {
         width: 100%;
         position: relative;
-        flex-basis: 33%; } }
+        flex-basis: 33%;
+        height: auto; } }
     .card__text--left {
       left: 3rem;
       text-align: left; }
@@ -454,18 +455,14 @@ body {
   .dead__text {
     flex-grow: 1; }
 
-.embedded-video {
+#video {
   width: 56rem;
   height: 31.5rem;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5); }
-
-#video {
-  width: 560;
-  height: 315; }
   @media (max-width: 37.5em) {
     #video {
-      width: 300;
-      height: 168; } }
+      width: 30rem;
+      height: 16.8rem; } }
 
 .footer {
   background-color: #444;
@@ -709,7 +706,3 @@ body {
       margin-top: 2rem; }
   .final-cta-text {
     text-align: center; }
-
-#video {
-  width: 56rem;
-  height: 31.5rem; }
