--- a/sass/components/_embedded-video.scss
+++ b/sass/components/_embedded-video.scss
@@ -1,15 +1,10 @@
-.embedded-video {
-	width: 56rem;
+#video {
+	width: 56rem; 
 	height: 31.5rem;
 	box-shadow: 0 1rem 2rem rgba(black, 0.5);
-}
-
-#video {
-	width: 560; 
-	height: 315;
 
 	@include respond(phone) {
-		width: 300;
-		height: 168;
+		width: 30rem;
+		height: 16.8rem;
 	}
 }
