Added button for header on mobile, fixed margins on mobile

--- a/sass/abstracts/_utilities.scss
+++ b/sass/abstracts/_utilities.scss
@@ -21,3 +21,10 @@
 .u-padding-bottom-lg { padding-bottom: 6rem !important; }
 
 .u-txt-shadow { text-shadow: 2px 2px 4px #222 !important; }
+
+.u-mobile-only {
+	display: none !important;
+	@include respond(phone) { 
+		display: initial !important;
+	} 
+}
