--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -173,6 +173,7 @@
 }
 
 .card-sm {
+	box-shadow: 1px 0rem 1rem rgba(0, 0, 0, 0.1);
 	background-color: $color-white;
 	height: 14rem;
 	width: 45%;
