--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,12 @@
 .u-txt-shadow {
   text-shadow: 2px 2px 4px #222 !important; }
 
+.u-mobile-only {
+  display: none !important; }
+  @media (max-width: 37.5em) {
+    .u-mobile-only {
+      display: initial !important; } }
+
 html {
   font-size: 62.25%; }
   @media (min-width: 112.5em) {
@@ -113,6 +119,7 @@ body {
 .cta,
 .cta:link,
 .cta:visited {
+  position: relative;
   font-family: 'jost';
   display: inline-block;
   padding: 1.5rem 4rem;
@@ -264,6 +271,7 @@ body {
     margin: 2rem; }
 
 .card-sm {
+  box-shadow: 1px 0rem 1rem rgba(0, 0, 0, 0.1);
   background-color: white;
   height: 14rem;
   width: 45%;
@@ -678,6 +686,9 @@ body {
   text-align: center;
   background-image: linear-gradient(to bottom, rgba(28, 118, 188, 0.8), rgba(10, 44, 70, 0.5)), url("../img/1262.jpg");
   background-repeat: repeat; }
+  @media (max-width: 37.5em) {
+    .section-traditions {
+      padding: 5rem 3rem 5rem 3rem; } }
 
 .section-traditions-sub {
   margin-top: -5rem;
