--- a/sass/abstracts/_utilities.scss
+++ b/sass/abstracts/_utilities.scss
@@ -22,6 +22,8 @@
 
 .u-txt-shadow { text-shadow: 2px 2px 4px #222 !important; }
 
+.u-reset-letter-spacing { letter-spacing: initial !important; }
+
 .u-mobile-only {
 	display: none !important;
 	@include respond(phone) { 
